# procplan

./: Dockerfile  LICENSE  README.md  config.sample.json  docker-compose.yml  pyproject.toml
data/: benchmark-config.json
procplan/: __init__.py  cli.py  config.py  db.py  notifier.py  server.py  service.py  timeutils.py
procplan/web/: index.html
tests/: test_timeutils.py
